src/objects/Land_Listing__c.object
<CustomObject>
    <description>MG_Land Listing</description>
    <fields>
        <fullName>Acres__c</fullName>
        <inlineHelpText>Size of the entire parcel available for sale</inlineHelpText>
        <label>Acres</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Broker_Agent_Name__c</fullName>
        <label>Broker/Agent Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Email__c</fullName>
        <label>Broker Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Broker_Logo_URL__c</fullName>
        <formula>Broker__r.Broker_Logo_URL_formula__c</formula>
        <label>Broker Logo URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Phone__c</fullName>
        <label>Broker Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Broker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Broker</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Broker (Account) must have a Land Broker associated to it.</errorMessage>
            <filterItems>
                <field>Account.Land_Broker__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <infoMessage>The Broker (Account) must have a Land Broker associated to it.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Land Listings</relationshipLabel>
        <relationshipName>Land_Listings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brokerage_Display_Name__c</fullName>
        <formula>Broker__r.Brokerage_Display_Name_formula__c</formula>
        <label>Brokerage Display Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brokerage_Website__c</fullName>
        <formula>Broker__r.Brokerage_Website__c</formula>
        <label>Brokerage Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Land_Listing_Key__c</fullName>
        <externalId>true</externalId>
        <label>DB Land Listing Key</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Density__c</fullName>
        <label>Density</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Listing_URL__c</fullName>
        <label>Listing URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <required>true</required>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Lot_Condition__c</fullName>
        <label>Lot Condition</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot_Size__c</fullName>
        <inlineHelpText>Typical lot size for an individual lot or homesite.  Should be represented as square footage not acres</inlineHelpText>
        <label>Lot Size</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MapImage__c</fullName>
        <formula>IMAGE(&quot;https://maps.googleapis.com/maps/api/staticmap?center=&quot; + Text(Location__Latitude__s) + &quot;,&quot; + Text(Location__Longitude__s) + &quot; &amp;zoom=13&amp;size=650x250&amp;maptype=roadmap&amp;markers=color:red%7C&quot; + Text(Location__Latitude__s) + &quot;,&quot; + Text(Location__Longitude__s), &quot;no map available&quot;, 250, 650)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MapImage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Units__c</fullName>
        <label>Number of Units Planned</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outside_Geographic_Coverage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Outside Geographic Coverage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attached</fullName>
                </value>
                <value>
                    <fullName>Detached</fullName>
                </value>
                <value>
                    <fullName>Attached/Detached</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Type__c</fullName>
        <label>Property Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Condos</fullName>
                </value>
                <value>
                    <fullName>Finished Lots</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Mixed Use</fullName>
                </value>
                <value>
                    <fullName>P&amp;E Lots</fullName>
                </value>
                <value>
                    <fullName>Partially Improved Lots</fullName>
                </value>
                <value>
                    <fullName>Residential Lots</fullName>
                </value>
                <value>
                    <fullName>Townhomes</fullName>
                </value>
                <value>
                    <fullName>Zoned Land</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reviewed_Listing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reviewed Listing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shortened_Listing_URL__c</fullName>
        <label>Shortened Listing URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street_Address_Description__c</fullName>
        <label>Street Address/Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visible_in_Zonda__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Visible in Zonda</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zonda_Customer_Id__c</fullName>
        <formula>Broker__r.Zonda_Customer_Id__c</formula>
        <label>Zonda Customer Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Days_Since_Last_Update__c</fullName>
        <formula>FLOOR( IF(NOT(ISNULL(LastModifiedDate)), TODAY() - (Broker__r.Land_Listing_Last_Date_Updated__c),0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Days since Land Listing Last Date Updated</inlineHelpText>
        <label># of Days Since Last Update</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Land Listing</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Broker__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>Street_Address_Description__c</columns>
        <columns>State__c</columns>
        <columns>Price__c</columns>
        <columns>Broker_Agent_Name__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Broker__c</field>
            <operation>contains</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Land_Listings</fullName>
        <columns>Broker__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>Street_Address_Description__c</columns>
        <columns>State__c</columns>
        <columns>Price__c</columns>
        <columns>Broker_Agent_Name__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Visible_in_Zonda__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All Land Listings</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Land Listing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Land Listings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>